--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,11 +5,11 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/characters/character">Characters</a>
-      <a mat-list-item routerLink="/characters/comics">Comics</a>
-      <a mat-list-item [routerLink]="['./characters/events']">Events</a>
-      <a mat-list-item routerLink="../characters/series">Series</a>
-      <a mat-list-item href="#">Stories</a>
+      <a mat-list-item href="/characters">Characters</a>
+      <a mat-list-item href="/comics">Comics</a>
+      <a mat-list-item href="/events">Events</a>
+      <a mat-list-item href="/series">Series</a>
+      <a mat-list-item href="/stories">Stories</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
