--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,18 +1,33 @@
-<div fxFlex fxLayout="column">
-  <div fxLayout="row-wrap">
-    <div fxFlex="25" fxFlex.md="33" fxFlex.sm="50" fxFlex.xs="100" fxLayout="column"
-      *ngFor="let character of allCharacters | async" style="padding: 5px;">
+<div class="background" fxFlex fxLayout="column">
+  <div fxLayout="row wrap">
+    <div
+      fxFlex="25"
+      fxFlex.md="33"
+      fxFle.sm="50"
+      fxFlex.xs="100"
+      fxLayout="column"
+      *ngFor="let i of ListCharacters | async"
+      style="padding: 15px"
+    >
       <mat-card>
-        <img mat-card-image src="{{character.thumbnail.path}}.{{character.thumbnail.extension}}"
-         alt="{{character.name}}">
-         <mat-card-title>
-           {{ character.name }}
-         </mat-card-title>
-         <mat-card-footer>
-          <a href="{{character.urls[0].url}}" target="_blank" fxFlex mat-flat-button color="primary">
-            Details
-          </a>
-         </mat-card-footer>
+        <img
+          mat-card-image
+          src="{{ i.thumbnail.path }}.{{ i.thumbnail.extension }}"
+          alt="{{ i.name }}"
+        />
+        <mat-card-title>
+          {{ i.name }}
+        </mat-card-title>
+        <mat-car-footer>
+          <a
+            href="{{ i.urls[0].url }}"
+            target="_blank"
+            fxFlex
+            mat-flat-button
+            color="primary"
+            >Detalhes</a
+          >
+        </mat-car-footer>
       </mat-card>
     </div>
   </div>
